--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,7 @@ text-unidecode==1.3
 urllib3==1.25.10
 uiautomator2==2.16.21
 facebook-wda==1.4.6
+pymssql==2.2.7
+PyMySQL==1.0.2
+cx_Oracle==8.3.0
+psycopg2==2.9.5
