引擎调度改版 采用WebSocket链接 支持多任务并发执行

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,5 @@
 [Platform]
 url = http://127.0.0.1:8080
-enable-proxy = false
 enable-stderr = true
 
 [Engine]
@@ -15,8 +14,6 @@ token = ******
 options = normal
 path = chromedriver.exe
 
-[PlatformProxy]
-url = http://0.0.0.0:80
-username = ******
-password = ******
+[RunSetting]
+max-run = 2
 
